--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Zoo Keepr</title>
   <link href="https://fonts.googleapis.com/css?family=Karla:400,700|Rubik:400,400i,700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="./assets/css/style.css"/>
+  <link rel="stylesheet" href="assets/css/style.css"/>
 </head>
 
 <body>
@@ -107,7 +107,7 @@
 
   </main>
 
-  <script src="./assets/js/script.js"></script>
+  <script src="assets/js/script.js"></script>
 </body>
 
 </html>
